--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:ital@0;1&family=Roboto+Condensed&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:ital@0;1&family=Roboto&family=Roboto+Condensed&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section>
+    <section class="image-7 display">
         <div>
-            <h1>Skip The Diet,</h1>
+            <h1><span class="sk">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
             <p>Imagine you don't need a diet because we provide
 
-                healthy and delicious food for you</p>
+                healthy and delicious food for you</p><br>
+            <a class="food" target="_blank"
+                href="https://www.foodpanda.com.bd/?gclid=Cj0KCQjwn4qWBhCvARIsAFNAMigk_Yqa5PJ1qyr3E1DWsmBCCSZh2gPIOnGZXMFpnDE6StoUtsagLl4aAnCbEALw_wcB">order
+                food</a>
         </div>
-        <div>
+        <div class="ig">
             <img src="image/Group 8449.png" alt="">
         </div>
     </section>
