--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <section class="image-7 display">
-        <div>
+        <div class="ig">
             <h1><span class="sk">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
@@ -29,6 +29,26 @@
         </div>
         <div class="ig">
             <img src="image/Group 8449.png" alt="">
+        </div>
+    </section>
+    <section class="tea-bag display">
+        <div id="farhana">
+            <img src="image/farhana-removebg-preview.png" alt="farhana">
+        </div>
+        <div id="tn">
+            <h1>The Nutrition Source </h1>
+            <h3 id="tea-h">Tea and Health</h3>
+            <p>Animal studies suggest potential health benefits of tea due to its high polyphenol content. Human studies
+                have generally been less conclusive, yet show promise. Observational research has found that tea
+                consumption of 2-3 cups daily is associated with a reduced risk of premature death, heart disease,
+                stroke, and type 2 diabetes. [2] However, there may be an increased risk of esophageal and stomach
+                cancers from drinking tea that is too hot (more than 131-140° F [55-60° C]). [2,3] Randomized controlled
+                trials are needed to confirm if these healthful and harmful associations are causal. In the meantime,
+                there appears to be little risk associated with drinking tea except for frequent consumption of very hot
+                tea. So pick a color, let it cool, and enjoy a cup!</p>
+            <a class="food" target="_blank"
+                href="https://www.hsph.harvard.edu/nutritionsource/food-features/tea/">Tea....Learn more
+                details</a>
         </div>
     </section>
 </body>
