--- a/index.html
+++ b/index.html
@@ -51,6 +51,42 @@
                 details</a>
         </div>
     </section>
+    <section>
+        <div>
+            <h2>My recipies</h2>
+            <p>Summer eating is all about sharing and mostly about eating with your hands. Pool parties, cookouts, and
+                picnics fundamentally thrive on communal bites, so make sure you've got the best summer appetizers
+                possible. Whether you want to ditch the utensils, take advantage of fresh produce, or just keep your
+                guests coming back for more, these summer-approved appetizers will do the trick and please everyone.
+            </p>
+        </div>
+        <div class="display">
+            <div>
+                <div class="ip">
+                    <img src="image/Project Cover.jpg" alt="Project Cover">
+                </div>
+                <div>
+                    <h3>Classic Crab Cakes</h3>
+                    <p>The sweet, clean flavor of crab shines in this recipe for Classic Crab Cakes. This light but
+                        filling seafood staple mainly relies on ingredients that are already in your fridge and pantry
+                        and comes together in less than half an hour. We've also included a salmon variation if you're
+                        not in the mood for crab. </p>
+                </div>
+            </div>
+            <div>
+                <div class="ip">
+                    <img src="image/Project Cover8.png" alt="Project Cover8">
+                </div>
+                <div>
+                    <h3>Lemon Red Snapper with Herbed Butter</h3>
+                    <p>A fragrant herbed butter and roasted lemon slices complement the sweet, nutty flavor of red
+                        snapper for a super-fresh dish. Complete the meal with colorful Sautéed Zucchini and Bell
+                        Peppers.Prep: 9 minutes; Cook: 13 minutes</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 
 </html>
