--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </div>
     </section>
     <section>
-        <div>
-            <h2>My recipies</h2>
+        <div class="my-recipies">
+            <h2>My Recipies</h2>
             <p>Summer eating is all about sharing and mostly about eating with your hands. Pool parties, cookouts, and
                 picnics fundamentally thrive on communal bites, so make sure you've got the best summer appetizers
                 possible. Whether you want to ditch the utensils, take advantage of fresh produce, or just keep your
@@ -61,7 +61,7 @@
             </p>
         </div>
         <div class="display">
-            <div>
+            <div class="cook">
                 <div class="ip">
                     <img src="image/Project Cover.jpg" alt="Project Cover">
                 </div>
@@ -73,7 +73,7 @@
                         not in the mood for crab. </p>
                 </div>
             </div>
-            <div>
+            <div class="cook">
                 <div class="ip">
                     <img src="image/Project Cover8.png" alt="Project Cover8">
                 </div>
